--- a/Walking Dinner (asp.net)/Views/persoondatas/Create.cshtml
+++ b/Walking Dinner (asp.net)/Views/persoondatas/Create.cshtml
@@ -16,7 +16,7 @@
 
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
-                @Html.LabelFor(model => model.volledigenaam,"volledige naam", new { @class = "label1" })
+                @Html.LabelFor(model => model.volledigenaam, "volledige naam", new { @class = "label1" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.volledigenaam, new { htmlAttributes = new { @class = "mystyle" } })
                     @Html.ValidationMessageFor(model => model.volledigenaam, "", new { @class = "text-danger" })
@@ -80,7 +80,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.volledigenaam2,"volledige naam", new { @class = "label9" })
+                @Html.LabelFor(model => model.volledigenaam2, "volledige naam", new { @class = "label9" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.volledigenaam2, new { htmlAttributes = new { @class = "mystyle9" } })
                     @Html.ValidationMessageFor(model => model.volledigenaam2, "", new { @class = "text-danger" })
@@ -88,7 +88,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.straatnaam2,"straatnaam", new { @class = "label10" })
+                @Html.LabelFor(model => model.straatnaam2, "straatnaam", new { @class = "label10" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.straatnaam2, new { htmlAttributes = new { @class = "mystyle10" } })
                     @Html.ValidationMessageFor(model => model.straatnaam2, "", new { @class = "text-danger" })
@@ -96,7 +96,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.huisnummer2,"huisnummer", new { @class = "label11" })
+                @Html.LabelFor(model => model.huisnummer2, "huisnummer", new { @class = "label11" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.huisnummer2, new { htmlAttributes = new { @class = "mystyle11" } })
                     @Html.ValidationMessageFor(model => model.huisnummer2, "", new { @class = "text-danger" })
@@ -104,7 +104,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.postcode2,"postcode", new { @class = "label12" })
+                @Html.LabelFor(model => model.postcode2, "postcode", new { @class = "label12" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.postcode2, new { htmlAttributes = new { @class = "mystyle12" } })
                     @Html.ValidationMessageFor(model => model.postcode2, "", new { @class = "text-danger" })
@@ -112,7 +112,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.plaats2,"plaats", new { @class = "label13" })
+                @Html.LabelFor(model => model.plaats2, "plaats", new { @class = "label13" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.plaats2, new { htmlAttributes = new { @class = "mystyle13" } })
                     @Html.ValidationMessageFor(model => model.plaats2, "", new { @class = "text-danger" })
@@ -120,7 +120,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.telefoonnummer2,"telefoonnummer", new { @class = "label14" })
+                @Html.LabelFor(model => model.telefoonnummer2, "telefoonnummer", new { @class = "label14" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.telefoonnummer2, new { htmlAttributes = new { @class = "mystyle14" } })
                     @Html.ValidationMessageFor(model => model.telefoonnummer2, "", new { @class = "text-danger" })
@@ -128,7 +128,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.emailadress2,"emailadress", new { @class = "label15" })
+                @Html.LabelFor(model => model.emailadress2, "emailadress", new { @class = "label15" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.emailadress2, new { htmlAttributes = new { @class = "mystyle15" } })
                     @Html.ValidationMessageFor(model => model.emailadress2, "", new { @class = "text-danger" })
@@ -136,12 +136,13 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.dieetwensen2,"dieetwensen", new { @class = "label16" })
+                @Html.LabelFor(model => model.dieetwensen2, "dieetwensen", new { @class = "label16" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.dieetwensen2, new { htmlAttributes = new { @class = "mystyle16" } })
                     @Html.ValidationMessageFor(model => model.dieetwensen2, "", new { @class = "text-danger" })
                 </div>
             </div>
+
 
 
             <div class="form-group">
@@ -152,11 +153,15 @@
         </div>
         <div>
             <label class="subtext">Vul in de gegevens  van je partner (optioneel)</label>
-            </div>
+        </div>
+
+        <div>
+            @Html.ActionLink("Create PDF", "Pdf")
+        </div>
     }
 
     <style>
-        
+
 
         .submitbutton {
             font-size: 0;
@@ -180,8 +185,8 @@
             }
 
             .submitbutton:start {
-            transition: 1s;
-            left: 0;
+                transition: 1s;
+                left: 0;
             }
 
         body {
@@ -191,9 +196,10 @@
             background-size: cover;
             display: inline-block;
         }
+
         .subtext {
             color: purple;
-            font-family:'Century Gothic';
+            font-family: 'Century Gothic';
             font-size: x-large;
             font-weight: bold;
             display: inline-block;
@@ -212,6 +218,7 @@
             margin-top: 520px;
             margin-left: 70px;
         }
+
         .label2 {
             color: purple;
             font-family: 'Century Gothic';
@@ -222,6 +229,7 @@
             margin-top: 520px;
             margin-left: 220px;
         }
+
         .label3 {
             color: purple;
             font-family: 'Century Gothic';
@@ -232,6 +240,7 @@
             margin-top: 520px;
             margin-left: 355px;
         }
+
         .label4 {
             color: purple;
             font-family: 'Century Gothic';
@@ -242,6 +251,7 @@
             margin-top: 520px;
             margin-left: 510px;
         }
+
         .label5 {
             color: purple;
             font-family: 'Century Gothic';
@@ -252,6 +262,7 @@
             margin-top: 520px;
             margin-left: 660px;
         }
+
         .label6 {
             color: purple;
             font-family: 'Century Gothic';
@@ -262,6 +273,7 @@
             margin-top: 520px;
             margin-left: 760px;
         }
+
         .label7 {
             color: purple;
             font-family: 'Century Gothic';
@@ -272,6 +284,7 @@
             margin-top: 520px;
             margin-left: 920px;
         }
+
         .label8 {
             color: purple;
             font-family: 'Century Gothic';
@@ -282,6 +295,7 @@
             margin-top: 520px;
             margin-left: 1060px;
         }
+
         .label9 {
             color: purple;
             font-family: 'Century Gothic';
@@ -292,6 +306,7 @@
             margin-top: 800px;
             margin-left: 70px;
         }
+
         .label10 {
             color: purple;
             font-family: 'Century Gothic';
@@ -302,6 +317,7 @@
             margin-top: 800px;
             margin-left: 220px;
         }
+
         .label11 {
             color: purple;
             font-family: 'Century Gothic';
@@ -312,6 +328,7 @@
             margin-top: 800px;
             margin-left: 355px;
         }
+
         .label12 {
             color: purple;
             font-family: 'Century Gothic';
@@ -322,6 +339,7 @@
             margin-top: 800px;
             margin-left: 510px;
         }
+
         .label13 {
             color: purple;
             font-family: 'Century Gothic';
@@ -332,6 +350,7 @@
             margin-top: 800px;
             margin-left: 660px;
         }
+
         .label14 {
             color: purple;
             font-family: 'Century Gothic';
@@ -342,6 +361,7 @@
             margin-top: 800px;
             margin-left: 760px;
         }
+
         .label15 {
             color: purple;
             font-family: 'Century Gothic';
@@ -352,6 +372,7 @@
             margin-top: 800px;
             margin-left: 920px;
         }
+
         .label16 {
             color: purple;
             font-family: 'Century Gothic';
