--- a/Walking Dinner (asp.net)/Views/persoondatas/Index.cshtml
+++ b/Walking Dinner (asp.net)/Views/persoondatas/Index.cshtml
@@ -42,9 +42,10 @@
         #mydivadmin {
             cursor: pointer;
             background-image: url('../../images/button_admin-login.png');
-            background-size: 100%;
+            background-size: 70%;
+            background-position: center;
             background-repeat: no-repeat;
-            height: 80px;
+            height: 40px;
             width: 210px;
             background-color: transparent;
             border-color: transparent;
